# env-setter

./: Cargo.toml  README.md  license.html
.github/workflows/: check-and-lint.yml  release.yml  test.yml
resources/: test.yaml  test_posix.yaml
resources/scripts/: echo_anothertest.sh
src/: configuration.rs  env_variables.rs  execute.rs  init.rs  main.rs  set.rs  utils.rs
