[package]
name = "env-setter"
version = "0.1.0"
authors = ["Torben <xendios@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
config = "0.11"
serde_derive = "1.0"
serde = "1.0"
read_input = "0.8"